--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "lib": ["ES2020","DOM"],
         "declaration": true,
         "outDir": "./dist/lib/es6",
-        "moduleResolution": "Node10"
+        "moduleResolution": "Node16",
     },
     "include": ["src/**/*"]
 }
