--- a/tsconfig.es5.json
+++ b/tsconfig.es5.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
         "module": "CommonJS",
-        "target": "ES6",
-        "lib": ["ES2020","DOM"],
+        "target": "ES5",
         "declaration": true,
         "outDir": "./dist/lib/es5",
-        "moduleResolution": "Node16"
+        "moduleResolution": "Node10",
+        "lib": ["ES2020","DOM"],
     },
     "include": ["src/**/*"]
 }
